feat(security): 鉴权代码重构